--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -156,6 +156,13 @@ input{
   border-color: #01693F !important; 
 }
 
+.center-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+
 /*.md-sidebar--primary {
   visibility: hidden;
   width: 150px;
